--- a/public/styles.css
+++ b/public/styles.css
@@ -63,3 +63,47 @@ h2 {
     padding: 20px;
     line-height: 25px
 }
+.email-text-inputting {
+    width: 800px;
+    margin: 50px auto;
+    text-align: left;
+    font-family: Arial;
+}
+.email-text-inputting label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 5px;
+}
+.email-text-inputting textarea {
+    resize: none;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid white;
+    border-radius: 8px;
+}
+.email-text-inputting textarea:focus {
+    border-color: blue;
+    outline: none;
+}
+#subject {
+    height: 50px;
+    margin-bottom: 20px;
+}
+#body {
+    height: 200px;
+}
+button {
+    margin-top: 10px;
+    background-color: rgb(44, 117, 177);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+}
+button:hover {
+    background-color: white;
+    color: black;
+}
