--- a/public/styles.css
+++ b/public/styles.css
@@ -2,21 +2,25 @@ body {
     background-color: powderblue;
     font-family: "Arial";
 }
+
 .title {
     text-align: center;
     font-size: 50px;
 }
+
 h2 {
     text-align: center;
     position: relative;
     top: 40px;
 }
+
 .container {
     display: flex;
     justify-content: center;
     gap: 30px;
     margin-top: 100px;
 }
+
 .box {
     background-color: white;
     border: 2px solid black;
@@ -27,26 +31,46 @@ h2 {
     color: inherit;
     text-decoration: none;
 }
+
+.box2 {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    width: 350px;
+    text-align: center;
+    color: inherit;
+    text-decoration: none;
+}
+
+.box2 p {
+    text-align: left;
+}
+
 .box:hover {
     transform: scale(1.03);
     border-color: blue;
     background-color: white;
 }
+
 .box:visited {
     color: inherit;
 }
+
 .faq-title {
     text-align: center;
     font-size: 40px;
     position: relative;
     top: 40px;
 }
+
 .faq-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     margin-top: 100px;
 }
+
 .faq {
     background-color: white;
     border: 2px solid black;
@@ -55,25 +79,30 @@ h2 {
     width: 80%;
     text-align: center;
 }
+
 .faq h3 {
     font-size: 30px;
 }
+
 .faq p {
     text-align: left;
     padding: 20px;
     line-height: 25px
 }
+
 .email-text-inputting {
     width: 800px;
     margin: 50px auto;
     text-align: left;
     font-family: Arial;
 }
+
 .email-text-inputting label {
     font-weight: bold;
     display: block;
     margin-bottom: 5px;
 }
+
 .email-text-inputting textarea {
     resize: none;
     width: 100%;
@@ -82,17 +111,21 @@ h2 {
     border: 2px solid white;
     border-radius: 8px;
 }
+
 .email-text-inputting textarea:focus {
     border-color: blue;
     outline: none;
 }
+
 #subject {
     height: 50px;
     margin-bottom: 20px;
 }
+
 #body {
     height: 200px;
 }
+
 button {
     margin-top: 10px;
     background-color: rgb(44, 117, 177);
@@ -103,7 +136,52 @@ button {
     cursor: pointer;
     font-size: 16px;
 }
+
 button:hover {
     background-color: white;
     color: black;
+}
+
+input[type="text"] {
+    width: 1000px;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 18px;
+    margin-top: 50px;
+}
+
+input[type="text"]:focus {
+    border-color: blue;
+    outline: none;
+}
+
+.generatedbody {
+    text-align: center;
+}
+
+.bigbox {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    width: 250px;
+    text-align: center;
+    color: inherit;
+    text-decoration: none;
+}
+.output-zone { 
+    width: 800px;
+    margin: 50px auto;
+    text-align: left;
+    font-family: Arial;
+}
+.output-zone textarea {
+    resize: none;
+    width: 100%;
+    height: 500px;
+    padding: 10px;
+    font-size: 16px;
+    border: 2px solid white;
+    border-radius: 8px;
 }
